# pocharlies-qdrant

./: .env.example  .gitignore  docker-compose.yml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
agent-service/: Dockerfile  config.py  main.py  requirements.txt
agent-service/api/: chat.py  health.py  mcp_api.py  tasks.py
agent-service/graphs/: supervisor.py
agent-service/mcp_client/: manager.py  mcp_servers.json
agent-service/static/: app.js  index.html  style.css
configs/: qdrant.yaml
docs/plans/: 2026-02-19-agent-sdk-migration-design.md  2026-02-19-agent-sdk-migration-plan.md  2026-02-24-langgraph-agent-orchestrator-design.md
mcp-server/: Dockerfile.picqer  README.md  picqer_server.py  pyproject.toml  requirements.txt  server.json  server.py
mcp-server/tests/: conftest.py  test_picqer_client.py
rag-service/: Dockerfile  FEATURES.md  agent.py  app.py  catalog_indexer.py  devops_indexer.py  glossary_data.py  indexer.py  jira_indexer.py  product_classifier.py  product_indexer.py  qdrant_utils.py  requirements.txt  reranker.py  retriever.py  shopify_client.py  shopify_graphql.py  sparse_encoder.py  sync_state.py  translator.py  web_indexer.py  webhook_handler.py
rag-service/agent/: __init__.py  cli.py  redis_session.py  runner.py  session_store.py  tools.py
rag-service/static/: app.js  index.html  style.css
