[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "picqer-mcp"
version = "1.1.0"
description = "MCP server for Picqer WMS — complete warehouse management API (43 tools)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Skirmshop", email = "mcp@skirmshop.es" },
]
keywords = ["mcp", "picqer", "warehouse", "wms", "inventory", "ai", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
picqer-mcp = "picqer_server:main"

[project.urls]
Homepage = "https://github.com/pocharlies/pocharlies-qdrant"
Repository = "https://github.com/pocharlies/pocharlies-qdrant"
Issues = "https://github.com/pocharlies/pocharlies-qdrant/issues"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["picqer_server.py", "picqer_client.py"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
